terraform/ecs_service.tf
resource "aws_ecs_service" "app" {

  name = "ecs-cicd-service"


  cluster = aws_ecs_cluster.main.id


  task_definition = aws_ecs_task_definition.app.arn


  desired_count = 1


  launch_type = "FARGATE"


  network_configuration {

    subnets = [
      aws_subnet.private_a.id,
      aws_subnet.private_b.id
    ]


    security_groups = [
      aws_security_group.ecs.id
    ]


    assign_public_ip = false
  }


  load_balancer {

    target_group_arn = aws_lb_target_group.app.arn


    container_name = "ecs-cicd-app"


    container_port = 5000
  }


  depends_on = [
    aws_lb_listener.http
  ]
}
