terraform/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "ecs-cicd-vpc"
  }
}


resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "ecs-cicd-igw"
  }
}

resource "aws_subnet" "public_a" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "us-east-1a"

  map_public_ip_on_launch = true

  tags = {
    Name = "ecs-public-a"
  }
}


resource "aws_subnet" "public_b" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.2.0/24"

  availability_zone = "us-east-1b"

  map_public_ip_on_launch = true

  tags = {
    Name = "ecs-public-b"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id


  route {
    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id
  }


  tags = {
    Name = "ecs-public-route"
  }
}


resource "aws_route_table_association" "public_a" {
  subnet_id = aws_subnet.public_a.id

  route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "public_b" {
  subnet_id = aws_subnet.public_b.id

  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {
    Name = "ecs-nat-eip"
  }
}


resource "aws_nat_gateway" "main" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public_a.id


  tags = {
    Name = "ecs-nat-gateway"
  }


  depends_on = [
    aws_internet_gateway.main
  ]
}

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.main.id


  cidr_block = "10.0.10.0/24"


  availability_zone = "us-east-1a"


  tags = {
    Name = "ecs-private-a"
  }
}


resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.main.id


  cidr_block = "10.0.11.0/24"


  availability_zone = "us-east-1b"


  tags = {
    Name = "ecs-private-b"
  }
}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"


    nat_gateway_id = aws_nat_gateway.main.id

  }


  tags = {
    Name = "ecs-private-route"
  }
}

resource "aws_route_table_association" "private_a" {

  subnet_id = aws_subnet.private_a.id


  route_table_id = aws_route_table.private.id
}


resource "aws_route_table_association" "private_b" {

  subnet_id = aws_subnet.private_b.id


  route_table_id = aws_route_table.private.id
}
